--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,18 @@
 </head>
 
 <body>
+
+  <div class="site-container">
+
+    <app-root>Loading forecast app...</app-root>
+
+    <div class="site-footer">
+        <p class="colophon">Copyright</p>
+    </div>
+  </div>
+  <!--
   <app-root>Loading forecast app...</app-root>
+  -->
 </body>
 
 </html>
